--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 jdbc.user=root
 jdbc.password=123456
