--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,29 +24,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker image with Chinese mirror
+      - name: Build Docker image
         run: |
-          # 使用国内可靠的Tomcat镜像
-          cat > Dockerfile << 'EOF'
-          FROM openjdk:17-jre-slim
-          
-          # 使用国内镜像下载Tomcat
-          RUN apt-get update && \
-              apt-get install -y wget && \
-              wget https://mirrors.tuna.tsinghua.edu.cn/apache/tomcat/tomcat-9/v9.0.82/bin/apache-tomcat-9.0.82.tar.gz -O /tmp/tomcat.tar.gz && \
-              tar -xzf /tmp/tomcat.tar.gz -C /usr/local && \
-              mv /usr/local/apache-tomcat-9.0.82 /usr/local/tomcat && \
-              rm /tmp/tomcat.tar.gz && \
-              apt-get remove -y wget && \
-              apt-get autoremove -y && \
-              rm -rf /var/lib/apt/lists/*
-          
-          COPY target/my-blog.war /usr/local/tomcat/webapps/ROOT.war
-          EXPOSE 8080
-          CMD ["/usr/local/tomcat/bin/catalina.sh", "run"]
-          EOF
-          
-          docker build -t my-blog:${{ github.sha }} .
+          # 使用 --no-cache 确保重新拉取镜像
+          docker build --no-cache -t my-blog:${{ github.sha }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
