--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,7 +84,11 @@ jobs:
             -e MYSQL_DATABASE=myblog \
             -e MYSQL_USER=bloguser \
             -e MYSQL_PASSWORD=ady190719 \
+            -e MYSQL_CHARSET=utf8mb4 \
+            -e MYSQL_COLLATION=utf8mb4_unicode_ci \
             mysql:8.0
+            --character-set-server=utf8mb4 \
+            --collation-server=utf8mb4_unicode_ci
             
             # 等待 MySQL 启动
             sleep 10
