--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://172.18.19.208:3306/myblog?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 jdbc.user=bloguser
 jdbc.password=ady190719
